--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://gmogoat.fr/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'GMO Goat'
 theme = "hugo-bearcub"
